# Crystal-Plasticity-UMAT

./: .gitignore  CITATION.cff  CMakeLists.txt  README.md  UMAT-NOTES.md  UMAT-VARIABLES.md  core.for  cp_params.csv  emulator.f90  emulator_results.txt  gslpinit.for  iteration.for  kinharden.for  latentharden.for  lubksb.for  ludcmp.for  noncubiccrystal.for  rotation.for  slipsys.for  strainrate.for  umat_abaqus.for  umat_standalone.for  utils.for  xit_emulator.for
examples/one_element/: HCP-UMAT.inp  README.md  abaqus.rpt  cp_params.csv  emulator_results.txt
huang_umat_archive/: umatcryspl_mod.inp
tests/: CMakeLists.txt  README.md  test_cross.f90  test_lubksb.f90  test_ludcmp.f90  xit_stub.f90
